# black-hole

./: Cargo.toml  README.md  WARP.md  flake.nix  justfile
data/: org.stardustxr.BlackHole.desktop  org.stardustxr.BlackHole.metainfo.xml
src/: black_hole.rs  main.rs  minimize.rs
